--- a/package.json
+++ b/package.json
@@ -3,25 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.6",
+    "@craco/craco": "^6.4.3",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/redux-mock-store": "^1.0.3",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.26.0",
+    "framer-motion": "6",
+    "postcss": "^8.4.7",
     "react": "^17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "5.0.0",
+    "redux-mock-store": "^1.5.4",
+    "sass": "^1.49.9",
     "typescript": "~4.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,5 +51,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {},
+  "jest": {
+    "moduleNameMapper": {
+      "^@components$": "<rootDir>/src/components/",
+      "^@features$": "<rootDir>/src/features/"
+    }
   }
 }
